tests/baselines/reference/arrayTypeOfFunctionTypes.errors.txt
==== tests/cases/compiler/arrayTypeOfFunctionTypes.ts (2 errors) ====
    // valid uses of arrays of function types
    
    var x: () => string[];
    var r = x[1];
    var r2 = r();
    var r2b = new r();
    
    var x2: { (): string }[];
    var r3 = x2[1];
    var r4 = r3();
    var r4b = new r3(); // error
                  ~~
!!! arrayTypeOfFunctionTypes.ts(11,15): error TS2084: Call signatures used in a 'new' expression must have a 'void' return type.
    
    var x3: Array<() => string>;
    var r5 = x2[1];
    var r6 = r5();
    var r6b = new r5(); // error
                  ~~
!!! arrayTypeOfFunctionTypes.ts(16,15): error TS2084: Call signatures used in a 'new' expression must have a 'void' return type.